# esp32-bme680-mqtt

./: .gitignore  CMakeLists.txt  README  bsec_integration.c  bsec_integration.h  firmware_connection.c  firmware_connection.h  firmware_main.c
